# simple-x11-remapper

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  example_config.yaml  practical_config.yaml  test_config.yaml
src/: config.rs  event_handler.rs  key_mapper.rs  lib.rs  main.rs  window_manager.rs
