[package]
name = "simple-x11-remapper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
x11 = "2.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
pkg-config = "0.3"

[[bin]]
name = "simple-x11-remapper"
path = "src/main.rs"
